[package]
name = "rustide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# common
sha-1 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = "0.21"

# rayon
rayon = "1.5"

# tokio
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"